--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -95,7 +95,7 @@
         android:textColor="@color/colorButtonText" />
 
     <Button
-        android:id="@+id/friends_btn"
+        android:id="@+id/skills_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
@@ -106,7 +106,7 @@
         android:layout_centerVertical="true"
 
         android:background="@drawable/button_gradient"
-        android:text="@string/friends"
+        android:text="@string/skills"
         android:textColor="@color/colorButtonText" />
 
     <Button
