--- a/app/src/main/res/layout/fragment_addicted.xml
+++ b/app/src/main/res/layout/fragment_addicted.xml
@@ -5,10 +5,10 @@
     android:padding="16dp"
     tools:context="Fragments.AddictedFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/addicted_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        ></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
