--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,20 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FFFFFF</color>
 
-    <!-- start colors -->
+
     <color name="colorButtonText">#FFFFFF</color>
     <color name="MAFIA_white">#FFFFFF</color>
     <color name="MAFIA_red">#b90000</color>
     <color name="Folding_cell_background">#bcbcbc</color>
     <color name="Folding_cell_content">#414141</color>
     <color name="black">#000000</color>
+
+    <!--profile colors-->
+
+    <color name="grayLight">#fafafa</color>
+    <color name="startRed">#df0946</color>
+    <color name="endRed">#e60b2c</color>
+    <color name="colorFlatButton">#f32136</color>
+
 
 </resources>
