--- a/app/src/main/res/layout/activity_joining_room.xml
+++ b/app/src/main/res/layout/activity_joining_room.xml
@@ -57,4 +57,6 @@
         android:layout_alignStart="@+id/joining_text"
         android:layout_alignParentBottom="true" />
 
+    <!--change-->
+
 </RelativeLayout>
