--- a/app/src/main/res/layout/fragment_sales_guns.xml
+++ b/app/src/main/res/layout/fragment_sales_guns.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context="Fragments.SalesGunsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/sales_guns_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        ></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
