Skills updated to 0.95

--- a/app/src/main/res/layout/fragment_bully.xml
+++ b/app/src/main/res/layout/fragment_bully.xml
@@ -5,11 +5,19 @@
     android:padding="16dp"
     tools:context="Fragments.BullyFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        android:text="Bully"
+        />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/bully_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
         ></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
