--- a/app/src/main/res/layout/fragment_police.xml
+++ b/app/src/main/res/layout/fragment_police.xml
@@ -5,12 +5,20 @@
     android:padding="16dp"
     tools:context="Fragments.PoliceFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        android:text="Police"
+        />
+
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/police_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
         ></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
