--- a/app/src/main/res/layout/fragment_thief.xml
+++ b/app/src/main/res/layout/fragment_thief.xml
@@ -5,10 +5,18 @@
     android:padding="16dp"
     tools:context="Fragments.ThiefFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        android:text="Thief"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/thief_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
         ></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
