--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -55,14 +55,6 @@
         android:cropToPadding="true"
         android:src="@drawable/menu2" />
 
-    <ImageView
-        android:id="@+id/ply"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:src="@drawable/play" />
-
 
 
     <Button
@@ -137,6 +129,22 @@
 
         android:background="@drawable/button_gradient"
         android:text="setting"
+        android:textColor="@color/colorButtonText" />
+
+
+    <Button
+        android:id="@+id/signup_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_margin="15dp"
+        android:paddingRight="50dp"
+        android:paddingLeft="50dp"
+
+        android:layout_centerHorizontal="true"
+
+        android:background="@drawable/button_gradient"
+        android:text="sign up/in"
         android:textColor="@color/colorButtonText" />
 
 
