--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -32,7 +32,11 @@
     <EditText
         android:id="@+id/username_txt"
         android:layout_width="100dp"
-        android:layout_height="20dp"
+        android:layout_height="50dp"
+
+        android:text="saeed"
+
+        android:textColor="#00bfff"
 
         android:layout_toEndOf="@id/username_lbl"
         android:layout_alignBottom="@id/username_lbl" />
@@ -42,6 +46,9 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
 
+        android:text="ddag@gjkd.com"
+
+        android:textColor="#00bfff"
         android:inputType="textEmailAddress"
 
         android:layout_alignStart="@id/username_txt"
@@ -55,10 +62,9 @@
         android:layout_height="wrap_content"
 
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/Check_btn"
-        android:layout_marginTop="80dp"
+        android:layout_alignParentTop="true"
 
-        android:textSize="10pt"
+        android:textSize="5pt"
         android:textColor="#b70000"/>
 
     <Button
@@ -70,6 +76,111 @@
         android:layout_centerHorizontal="true"
 
         android:text="Check"/>
+
+    <TextView
+        android:id="@+id/code_lbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Code :"
+        android:textSize="10pt"
+
+        android:layout_toStartOf="@id/Check_btn"
+        android:layout_alignBottom="@id/Check_btn"
+
+        android:visibility="invisible"/>
+
+    <EditText
+        android:id="@+id/code_txt"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+
+        android:inputType="number"
+        android:textColor="#00bfff"
+
+        android:layout_toEndOf="@id/code_lbl"
+        android:layout_alignBottom="@id/Check_btn"
+
+        android:layout_marginStart="40dp"
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/resend_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Send the code again"
+
+        android:layout_below="@id/code_txt"
+        android:layout_centerHorizontal="true"
+
+        android:layout_marginTop="10dp"
+
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/password_lbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="password :"
+
+        android:textSize="10pt"
+
+        android:layout_alignParentBottom="true"
+
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="150dp"
+
+        android:visibility="invisible"/>
+
+    <EditText
+        android:id="@+id/password_txt"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+
+        android:textColor="#00bfff"
+
+        android:inputType="textPassword"
+        android:layout_alignEnd="@id/username_txt"
+        android:layout_alignBottom="@id/password_lbl"
+
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/done_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Done"
+        android:textSize="8pt"
+
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+
+        android:padding="20dp"
+        android:layout_margin="30dp"
+
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/signin_link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/already"
+
+        android:textColor="#001eff"
+        android:textSize="8pt"
+
+        android:layout_alignParentBottom="true"
+        android:padding="10dp"
+        />
+
+    <FrameLayout
+        android:id="@+id/signin_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
 
 
 </RelativeLayout>
