--- a/app/src/main/res/layout/activity_joining_room.xml
+++ b/app/src/main/res/layout/activity_joining_room.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.coins.black.main_menu.JoiningRoom">
 
     <TextView android:text="Wating for other players..." android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/joining_text"
         android:textSize="25dp"
+
+        android:layout_margin="16dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -24,18 +22,21 @@
         android:src="@drawable/menu"
         android:layout_centerHorizontal="true"
 
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
         android:layout_width="100dp"
         android:layout_height="100dp"
+
         android:layout_alignEnd="@+id/joining_text"
         android:layout_alignLeft="@+id/joining_text"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/joining_text"
         android:layout_alignStart="@+id/joining_text"
+
+        android:layout_margin="16dp"
         android:progressDrawable="@drawable/circular_progress_bar" />
 
     <FrameLayout
