--- a/app/src/main/res/layout/fragment_wait_before_start.xml
+++ b/app/src/main/res/layout/fragment_wait_before_start.xml
@@ -2,8 +2,127 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f1f1f1"
+    android:background="#f1f1ff"
     tools:context="Fragments.WaitBeforeStartFragment">
+
+    <EditText
+        android:id="@+id/input_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:background="#FFF"
+
+        android:inputType="textAutoComplete|textMultiLine|textCapSentences"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/send_btn"/>
+
+    <ImageView
+        android:id="@+id/send_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/send_icon"
+
+        android:padding="10dp"
+        android:layout_margin="5dp"
+
+        android:layout_alignParentBottom="true"
+
+        android:layout_alignParentEnd="true"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff"
+
+
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+
+        android:layout_above="@id/input_txt"
+        android:layout_below="@+id/toolsFrame">
+
+        <TextView
+            android:id="@+id/output_lbl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            />
+    </ScrollView>
+
+
+    <RelativeLayout
+        android:id="@+id/toolsFrame"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="#FFF"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+        <TextView
+            android:id="@+id/noe_lbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Number of Entries :"
+            android:textSize="8pt"
+            android:textColor="#e40000"
+
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:id="@+id/noe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:textSize="8pt"
+            android:textColor="#00afe4"
+
+            android:layout_margin="5dp"
+
+            android:layout_toEndOf="@id/noe_lbl"/>
+
+
+        <TextView
+            android:id="@+id/countdown_lbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Countdown:"
+            android:textSize="8pt"
+            android:textColor="#e40000"
+
+            android:layout_margin="5dp"
+
+            android:layout_below="@id/noe_lbl" />
+
+        <TextView
+            android:id="@+id/countdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:textSize="8pt"
+            android:textColor="#00afe4"
+
+            android:layout_margin="5dp"
+
+            android:layout_toEndOf="@id/countdown_lbl"
+            android:layout_alignBottom="@id/countdown_lbl"/>
+    </RelativeLayout>
 
 
 
